# esp32_pro_firmware

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  sdkconfig
.cache/clangd/index/: jsmn.h.9B10E4980174C9C5.idx  json_parser.c.AE0475D523C60917.idx  json_parser.h.0B51501C8986F2A5.idx  main.cpp.46A4AE1F528A9193.idx
.devcontainer/: devcontainer.json
herramientas_pc/: pyproject.toml
knowledge/: Guide_environment.md
main/: CMakeLists.txt  app.cpp  idf_component.yml  main.cpp
